fix: set artbot as not beta

--- a/roles/artbot/tasks/main.yml
+++ b/roles/artbot/tasks/main.yml
@@ -74,6 +74,8 @@
   args:
      executable: /bin/bash
      chdir: /home/artbot/artbot
+  environment:
+    NO_BETA: "true"
   become_user: artbot
   when: git.changed is true
   tags: 
