fix: run npm install on update

--- a/roles/artbot/tasks/main.yml
+++ b/roles/artbot/tasks/main.yml
@@ -68,6 +68,7 @@
   become_user: artbot
   tags: 
   - artbot_app
+  - update
 
 - name: Build artbot
   shell: source /home/artbot/.nvm/nvm.sh && npm run build
