cd: use correct no_beta var

--- a/roles/artbot/tasks/main.yml
+++ b/roles/artbot/tasks/main.yml
@@ -76,7 +76,7 @@
      executable: /bin/bash
      chdir: /home/artbot/artbot
   environment:
-    NO_BETA: "true"
+    NEXT_PUBLIC_NO_BETA: "true"
   become_user: artbot
   when: git.changed is true
   tags: 
