fix: needs root afterall

--- a/examples/inventory.yml
+++ b/examples/inventory.yml
@@ -7,7 +7,7 @@ all:
       ansible_become: true
     regen_worker:
       ansible_host: 10.0.0.2 # Put your regen worker IP here. You can use `localhost` for your current PC
-      ansible_become: false
+      ansible_become: true
       worker_username: hworker # You can use your own username if you run on `localhost`
       api_key: "abcdefg012345"
       dreamer_name: My Asible Dreamer
