feat: some undocumented features

--- a/roles/horde_regen_worker/defaults/main.yml
+++ b/roles/horde_regen_worker/defaults/main.yml
@@ -208,6 +208,13 @@ models_to_skip:
 # and you very likely would get more kudos/hr if you just lower your max_power.
 suppress_speed_warnings: false # Currently unused in regen
 
+## Advanced features
+
+moderate_performance_mode: false
+high_performance_mode: false
+# Don't change this unless you know what you're doing
+exit_on_unhandled_faults: true
+
 #########################
 ## Scribe (LLM Worker) ##
 #########################
