fix: service name

--- a/roles/horde_regen_worker/tasks/main.yml
+++ b/roles/horde_regen_worker/tasks/main.yml
@@ -95,7 +95,7 @@
   systemd:
     state: started
     daemon_reload: yes
-    name: ai_horde_worker
+    name: "{{ worker_service_name }}"
     enabled: True
     scope: user
   environment:
