--- a/roles/horde_regen_worker/defaults/main.yml
+++ b/roles/horde_regen_worker/defaults/main.yml
@@ -24,7 +24,8 @@ regen_worker_repo_version: main
 # Set this to true to make the worker update the runtime manually the first time
 # useful if setting up multiple services using the same runtime, to avoid multiple
 # servicers trying to do it at the same time and deadlocking
-update_runtime: false
+# Setting this to true, will also download all models specified, to avoid running parallel downloads of the same files
+initialize: false
 
 ## BridgeData vars
 # The horde url
