--- a/roles/horde_regen_worker/tasks/main.yml
+++ b/roles/horde_regen_worker/tasks/main.yml
@@ -49,12 +49,12 @@
     path: /home/{{ worker_username }}/{{ worker_clone_dir }}/bin
     owner: "{{ worker_username }}"
     group: "{{ worker_username }}"
-    state: directory
+    state: 
   tags: 
   - worker
 
 - name: Ensure models_dir dir '{{ models_dir }}' exists.
-  file:
+  file:directory
     path: /home/{{ worker_username }}/{{ models_dir }}
     owner: "{{ worker_username }}"
     group: "{{ worker_username }}"
@@ -70,6 +70,8 @@
   when: 
   - initialize is true
   - amd_gpu is true
+  tags: 
+  - worker
 
 - name: Ensure update-runtime is run for Nvidia GPUs
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/update-runtime.sh
@@ -79,6 +81,8 @@
   when: 
   - initialize is true
   - amd_gpu is false
+  tags: 
+  - worker
 
 - name: Ensure models are downloaded for the first time
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/runtime-rocm.sh python -s /home/{{ worker_username }}/{{ worker_clone_dir }}/download_models.py
@@ -88,6 +92,8 @@
   when: 
   - initialize is true
   - amd_gpu is true
+  tags: 
+  - worker
 
 - name: Ensure models are downloaded for the first time
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/runtime.sh python -s /home/{{ worker_username }}/{{ worker_clone_dir }}/download_models.py
@@ -97,6 +103,8 @@
   when: 
   - initialize is true
   - amd_gpu is false
+  tags: 
+  - worker
 
 
 - name: Deploy bridgeData
