--- a/roles/horde_regen_worker/tasks/main.yml
+++ b/roles/horde_regen_worker/tasks/main.yml
@@ -55,7 +55,7 @@
 
 - name: Ensure update-runtime is run for AMD GPUs
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/update-runtime-rocm.sh
-  become: false
+  become_user: "{{ worker_username }}"
   args:
      executable: /bin/bash
      chdir: /home/{{ worker_username }}/{{ worker_clone_dir }}
@@ -67,7 +67,7 @@
 
 - name: Ensure update-runtime is run for Nvidia GPUs
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/update-runtime.sh
-  become: false
+  become_user: "{{ worker_username }}"
   args:
      executable: /bin/bash
      chdir: /home/{{ worker_username }}/{{ worker_clone_dir }}
@@ -79,7 +79,7 @@
 
 - name: Ensure models are downloaded for the first time
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/runtime-rocm.sh python -s /home/{{ worker_username }}/{{ worker_clone_dir }}/download_models.py
-  become: false
+  become_user: "{{ worker_username }}"
   args:
      executable: /bin/bash
      chdir: /home/{{ worker_username }}/{{ worker_runtime_dir }}
@@ -91,7 +91,7 @@
 
 - name: Ensure models are downloaded for the first time
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/runtime.sh python -s /home/{{ worker_username }}/{{ worker_clone_dir }}/download_models.py
-  become: false
+  become_user: "{{ worker_username }}"
   args:
      executable: /bin/bash
      chdir: /home/{{ worker_username }}/{{ worker_runtime_dir }}
