fix: Adds user to the required groups
Closes #6

--- a/roles/horde_regen_worker/tasks/main.yml
+++ b/roles/horde_regen_worker/tasks/main.yml
@@ -15,6 +15,10 @@
   user:
     name: "{{ worker_username }}"
     shell: /bin/bash
+    groups: 
+    - video
+    - render
+    append: true
   tags: worker
 
 
