Restarts the service on changes
The restart is via systemd so it's graceful

Closes #5

--- a/roles/horde_regen_worker/handlers/main.yml
+++ b/roles/horde_regen_worker/handlers/main.yml
@@ -1,2 +1,17 @@
 ---
 
+
+- name: Restart AI Worker service
+  systemd:
+    state: restart
+    daemon_reload: yes
+    name: "{{ worker_service_name }}"
+    enabled: True
+    scope: user
+  environment:
+    XDG_RUNTIME_DIR: "/run/user/{{ getent_passwd[worker_username].1 }}"
+  become_user: "{{ worker_username }}"
+  when: not service_started.changed
+  tags: 
+  - worker
+  - systemd
