--- a/examples/regen_worker.yml
+++ b/examples/regen_worker.yml
@@ -5,3 +5,11 @@
   roles:
   - name: haidra.deployments.horde_regen_worker
     tags: regen
+
+# Uncomment and use this for AMD GPUs instead
+  # roles:
+  # - name: haidra.deployments.amd_gpu_drivers
+  # - name: haidra.deployments.horde_regen_worker
+  #   vars:
+  #     amd_gpu: true
+  #   tags: regen
