--- a/roles/horde_regen_worker/tasks/main.yml
+++ b/roles/horde_regen_worker/tasks/main.yml
@@ -84,6 +84,16 @@
   - worker
   - initialize
 
+- name: Show update_runtime output
+  debug:
+    var: update_runtime
+  when: 
+  - initialize is true
+  tags: 
+  - worker
+  - initialize
+  - debug
+
 - name: Ensure update-runtime is run for Nvidia GPUs
   shell: /home/{{ worker_username }}/{{ worker_clone_dir }}/update-runtime.sh
   become_user: "{{ worker_username }}"
