--- a/roles/artbot/tasks/main.yml
+++ b/roles/artbot/tasks/main.yml
@@ -77,6 +77,7 @@
      chdir: /home/artbot/artbot
   environment:
     NEXT_PUBLIC_NO_BETA: "true"
+    ARTBOT_STATUS_API: "{{ artbot_status_api }}"
   become_user: artbot
   when: git.changed is true
   tags: 
